--- a/translation/pom.xml
+++ b/translation/pom.xml
@@ -125,6 +125,18 @@
             <artifactId>fastjson</artifactId>
             <version>2.0.34</version> <!-- 使用最新稳定版 -->
         </dependency>
+        <dependency>
+            <groupId>com.aliyun.oss</groupId>
+            <artifactId>aliyun-sdk-oss</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.26</version>
+        </dependency>
+
     </dependencies>
 
     <build>
