--- a/translation/src/main/resources/com/example/mapper/favoritesMapper.xml
+++ b/translation/src/main/resources/com/example/mapper/favoritesMapper.xml
@@ -51,7 +51,7 @@
         WHERE userId = #{userId};
     </select>
     <!-- 根据 userId 和 targetText 或 sourceText 内容搜索历史记录 -->
-    <select id="selectFavoritesByUserIdAndText" resultType="com.example.translation.pojo.po.Favorites">
+    <select id="selectFavoritesByUserIdAndText" resultType="com.example.translation.pojo.vo.FavoriteVO">
         SELECT *
         FROM Favorites
         WHERE userId = #{userId}
