--- a/translation/src/main/resources/com/example/mapper/userMapper.xml
+++ b/translation/src/main/resources/com/example/mapper/userMapper.xml
@@ -35,5 +35,22 @@
     <select id="findUserInfoByUsernameAndPassword" resultType="com.example.translation.pojo.po.User">
         SELECT * FROM User WHERE username = #{username} AND password = #{password}
     </select>
+    <select id="findUserByPhone" resultType="com.example.translation.pojo.po.User">
+        SELECT * FROM user WHERE phone = #{phoneNumber}
+    </select>
+    <select id="findUserById" resultType="com.example.translation.pojo.po.User">
+        SELECT * FROM user WHERE id = #{userId}
+    </select>
 
+    <update id="updateUserName">
+        UPDATE user SET name = #{newName} WHERE id = #{userId}
+    </update>
+    <update id="updateAvatar">
+        UPDATE user
+        SET avatar = #{avatar}
+        WHERE id = #{userId}
+    </update>
+    <update id="updatePassword">
+        UPDATE user SET password = #{password} WHERE id = #{id}
+    </update>
 </mapper>
