--- a/translation/pom.xml
+++ b/translation/pom.xml
@@ -136,7 +136,16 @@
             <artifactId>hutool-all</artifactId>
             <version>5.8.26</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.3</version>
+        </dependency>
     </dependencies>
 
     <build>
