--- a/translation/src/main/resources/com/example/mapper/favoritesMapper.xml
+++ b/translation/src/main/resources/com/example/mapper/favoritesMapper.xml
@@ -21,18 +21,18 @@
     </sql>
     <!-- 插入一条收藏记录 -->
     <insert id="insertFavorites" parameterType="com.example.translation.pojo.po.Favorites"  useGeneratedKeys="true" keyProperty="id">
-        INSERT INTO Favorites (userId, sourceText, targetText,sourceLang,targetLang,reflect,reflectText)
+        INSERT INTO favorites (userId, sourceText, targetText,sourceLang,targetLang,reflect,reflectText)
         VALUES (#{userId}, #{sourceText}, #{targetText},#{sourceLang},#{targetLang},#{reflect},#{reflectText});
     </insert>
 
     <!-- 根据 ID 删除一条收藏记录 -->
     <delete id="deleteFavoritesById" parameterType="long">
-        DELETE FROM Favorites WHERE id = #{id} and userId=#{userId};
+        DELETE FROM favorites WHERE id = #{id} and userId=#{userId};
     </delete>
 
     <!-- 更新一条收藏记录 -->
     <update id="updateFavorites" parameterType="com.example.translation.pojo.po.Favorites">
-        UPDATE Favorites
+        UPDATE favorites
         SET userId = #{userId}, sourceText = #{sourceText}, targetText = #{targetText},sourceLang=#{sourceLang},targetLang=#{targetLang}
         WHERE id = #{id};
     </update>
@@ -40,20 +40,20 @@
     <!-- 根据 ID 查询一条收藏记录 -->
     <select id="selectFavoritesById" parameterType="long" resultType="com.example.translation.pojo.po.Favorites">
         SELECT *
-        FROM Favorites
+        FROM favorites
         WHERE id = #{id};
     </select>
 
     <!-- 查询所有收藏记录 -->
     <select id="selectAllFavorites" resultType="com.example.translation.pojo.vo.FavoriteVO">
         SELECT id, sourceText, targetText, sourceLang,targetLang,reflect,reflectText,createTime,updateTime
-        FROM Favorites
+        FROM favorites
         WHERE userId = #{userId};
     </select>
     <!-- 根据 userId 和 targetText 或 sourceText 内容搜索历史记录 -->
     <select id="selectFavoritesByUserIdAndText" resultType="com.example.translation.pojo.vo.FavoriteVO">
         SELECT *
-        FROM Favorites
+        FROM favorites
         WHERE userId = #{userId}
           AND (targetText LIKE CONCAT('%', #{text}, '%') OR sourceText LIKE CONCAT('%', #{text}, '%'));
     </select>
