--- a/translation/src/main/resources/com/example/mapper/historyMapper.xml
+++ b/translation/src/main/resources/com/example/mapper/historyMapper.xml
@@ -5,7 +5,7 @@
 
 <mapper namespace="com.example.translation.mapper.HistoryMapper">
     <sql id="createHistoryTable">
-        CREATE TABLE IF NOT EXISTS History (
+        CREATE TABLE IF NOT EXISTS history (
             id BIGINT PRIMARY KEY AUTO_INCREMENT,
             userId BIGINT NOT NULL,
             sourceLang TEXT NOT NULL,
@@ -21,7 +21,7 @@
     </sql>
     <!-- 插入一条历史记录 -->
     <insert id="insertHistory" parameterType="com.example.translation.pojo.po.History">
-        INSERT INTO History (userId, sourceText, targetText, sourceLang,targetLang,reflect,reflectText)
+        INSERT INTO history (userId, sourceText, targetText, sourceLang,targetLang,reflect,reflectText)
         VALUES (#{userId}, #{sourceText}, #{targetText},#{sourceLang},#{targetLang},#{reflect},#{reflectText});
     </insert>
 
@@ -34,13 +34,13 @@
     <!-- 查询所有历史记录 -->
     <select id="selectAllHistories" resultType="com.example.translation.pojo.vo.HistoryVO">
         SELECT id, sourceText, targetText, sourceLang,targetLang,reflect,reflectText,createTime,updateTime
-        FROM History
+        FROM history
         WHERE userId = #{userId};
     </select>
     <!-- 根据 userId 和 targetText 或 sourceText 内容搜索历史记录 -->
     <select id="searchHistories" resultType="com.example.translation.pojo.po.History">
         SELECT *
-        FROM History
+        FROM history
         WHERE userId = #{userId}
           AND (targetText LIKE CONCAT('%', #{text}, '%') OR sourceText LIKE CONCAT('%', #{text}, '%'));
     </select>
